--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/uyouthe/gasgasgas/issues"
   },
-  "homepage": "https://github.com/uyouthe/gasgasgas#readme"
+  "homepage": "https://github.com/uyouthe/gasgasgas#readme",
+  "dependencies": {
+    "npm-check-updates": "^2.15.0"
+  }
 }
